paleta de cores e suas variaveis

--- a/assets/scss/dhuo/_color_palete.scss
+++ b/assets/scss/dhuo/_color_palete.scss
@@ -4,40 +4,40 @@
 // //Font Family
 // $font-family-default: hero-new, Roboto, sans-serif;
 
-// //Brand Colors
-// $color-neutral-black: #000000;
-// $color-neutral-white: #ffffff;
-// $color-neutral-400: #323232;
-// $color-neutral-300: #6e6e6e;
-// $color-neutral-200: #bcbcbc;
-// $color-neutral-100: #eaeaea;
-// $color-neutral-50: #f4f4f4;
-// $color-neutral-25: #f9f9f9;
-// $color-primary-400: #5d2786;
-// $color-primary-300: #7933ac;
-// $color-primary-200: #8e3ccb;
-// $color-primary-100: #b24bff;
-// $color-secondary-400: #c14726;
-// $color-secondary-300: #e3542d;
-// $color-secondary-200: #ff5e32;
-// $color-secondary-100: #ff8c32;
-// $color-negative-400: #b32e34;
-// $color-negative-300: #d7373f;
-// $color-negative-200: #e34850;
-// $color-negative-100: #fc5059;
-// $color-warning-400: #d6a200;
-// $color-warning-300: #f0b600;
-// $color-warning-200: #ffc200;
-// $color-warning-100: #ffd54e;
-// $color-accent-400: #1f7559;
-// $color-accent-300: #268e6c;
-// $color-accent-200: #2d9d78;
-// $color-accent-100: #38c294;
-// $color-accent-50: #bbdfd3;
+//Brand Colors
+$color-neutral-black: #000000;
+$color-neutral-white: #ffffff;
+$color-neutral-400: #323232;
+$color-neutral-300: #6e6e6e;
+$color-neutral-200: #bcbcbc;
+$color-neutral-100: #eaeaea;
+$color-neutral-50: #f4f4f4;
+$color-neutral-25: #f9f9f9;
+$color-primary-400: #5d2786;
+$color-primary-300: #7933ac;
+$color-primary-200: #8e3ccb;
+$color-primary-100: #b24bff;
+$color-secondary-400: #c14726;
+$color-secondary-300: #e3542d;
+$color-secondary-200: #ff5e32;
+$color-secondary-100: #ff8c32;
+$color-negative-400: #b32e34;
+$color-negative-300: #d7373f;
+$color-negative-200: #e34850;
+$color-negative-100: #fc5059;
+$color-warning-400: #d6a200;
+$color-warning-300: #f0b600;
+$color-warning-200: #ffc200;
+$color-warning-100: #ffd54e;
+$color-accent-400: #1f7559;
+$color-accent-300: #268e6c;
+$color-accent-200: #2d9d78;
+$color-accent-100: #38c294;
+$color-accent-50: #bbdfd3;
 
-// $color-link-300: #3978b9;
-// $color-informative-200: #1678d1;
-// $color-informative-100: #1b92ff;
+$color-link-300: #3978b9;
+$color-informative-200: #1678d1;
+$color-informative-100: #1b92ff;
 
 $colors: (
   light: (
