--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,12 +22,8 @@
 @import 'misc';
 @import 'dark-mode';
 
-/* @overwrite Theme styles Dhuo */
-@import 'dhuo/color_palete';
-
 /* Animate.css custom build (just selected animations to minimize bundle size) */
 @import '../css/animate.min.css';
 
-.dark-mode body {
-  background-color: #242424;
-}
+/* @overwrite Theme styles Dhuo */
+@import 'dhuo/tokens';
