--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -27,3 +27,8 @@
 
 /* @overwrite Theme styles Dhuo */
 @import 'dhuo/tokens';
+
+//provisório
+.dark-mode body {
+  background-color: #242424 !important;
+}
