--- a/assets/scss/_theme-default.scss
+++ b/assets/scss/_theme-default.scss
@@ -1,12 +1,14 @@
 /* We'll need some initial vars to use here */
 @import '~bulma/sass/utilities/initial-variables';
 
+@import './dhuo/tokens';
+
 /* Base: Size  */
 $size-base: 1rem;
 $default-padding: $size-base * 1.5;
 
 /* Default font */
-$family-sans-serif: 'Nunito', sans-serif;
+$family-sans-serif: $font-family-default;
 
 /* Base color */
 $base-color: #2e323a;
